# totify

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: release.yaml
systemd/: totify.service  totify.timer
totify/: __init__.py
